# gospeed

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  Taskfile.yml  docker-compose.yml  go.mod
.github/workflows/: ci.yml  release-fury.yml  release-npm.yml  release.yml
cmd/gospeed/: main.go
cmd/gospeed-server/: main.go
docs/: FUTURE_PLAN.md  RELEASE.md  RELEASE_SETUP.md  index.html  install-server.ps1  install.ps1  install.sh  tests.html
internal/client/: client.go  progress.go
internal/platform/: socket.go  socket_darwin.go  socket_freebsd.go  socket_linux.go  socket_windows.go
internal/protocol/: codec.go  codec_test.go  constants.go  messages.go  tls.go
internal/results/: color.go  color_other.go  color_windows.go  format.go  format_test.go  grade.go  grade_test.go  history.go  history_test.go
internal/server/: handler.go  server.go  server_test.go  session.go  session_test.go
internal/tests/: bidir.go  bufferbloat.go  common.go  common_test.go  connect.go  connect_test.go  dns.go  dns_test.go  helpers_test.go  jitter.go  jitter_test.go  latency.go  latency_test.go  mtu.go  mtu_test.go  tcp.go  tcp_test.go  udp.go  udp_test.go
internal/tlsutil/: acme.go  selfsigned.go
internal/version/: version.go
k8s/: README.md
k8s/manifests/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  service.yaml
npm/gospeed-server/: install.js  (+1 more)
pypi/: README.md  pyproject.toml
pypi/src/gospeed/: __init__.py  __main__.py
scripts/: npm-packages.sh  npm-publish.sh  release.sh
(+38 files in other folders)
