[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gospeed"
version = "0.0.0"  # stamped by release-fury.yml at publish time
description = "Fast, zero-dependency network speed testing tool"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "goozt" }]
keywords = ["cli", "go-binary", "network", "speedtest"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Environment :: Console",
]

[project.urls]
Homepage = "https://gospeed.goozt.org"
Source = "https://github.com/goozt/gospeed"
Issues = "https://github.com/goozt/gospeed/issues"

[project.scripts]
gospeed = "gospeed.__main__:main"
gospeed-server = "gospeed.__main__:main_server"

[tool.setuptools.packages.find]
where = ["src"]
